# pdmpx

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pytest.ini  setup.py
deprecated/examples/: bouncy_gaussian.py
examples/: bouncy.py  cold_bouncy_toy.py  cold_bouncy_toynn.py
pdmpx/: __init__.py  bouncy.py  bouncy_test.py  bps.py  dir_derivs.py  dynamics.py  dynamics_test.py  pdmp.py  queues.py  queues_test.py  refreshments.py  timers.py  timers_test.py
pdmpx/bouncy/: __init__.py  bounces.py  bps.py  dynamics.py  dynamics_test.py  refreshments.py  refreshments_test.py
pdmpx/old/: bouncy.py  bouncy_test.py  bps.py  oscnbps.py  pdmp_old.py
pdmpx/poisson_time/: __init__.py  approx_integr.py  linear.py  linear_test.py  poisson_time.py  quadratic.py
pdmpx/poisson_time/_cpu/: __init__.py  linear.py  quadratic.py
pdmpx/poisson_time/numba/: quadratic.py
pdmpx/utils/: __init__.py  dir_derivs.py  dir_derivs_test.py  func.py  func_test.py  tree.py  tree_test.py  utils.py
sketches/: bblade3bps.py  bblade_bps.py  beyblade3bps.py  freeves.py  pdao.py  quadr_dyn.py  s.py
src/pdmpx/: conftest.py  queues.py  queues_test.py  timers.py  timers_test.py
src/pdmpx/bouncy/: bounces_test.py  bps.py  bps_test.py  dynamics_test.py
src/pdmpx/poisson_time/: linear_test.py  quadratic.py  quadratic_test.py
src/pdmpx/poisson_time/_cpu/: linear.py  quadratic.py
src/pdmpx/utils/: __init__.py  func.py  kernels.py  tree.py
toyproblems/: toyproblems.py
